--- a/docker/dockerfile-build-ubuntu-rock
+++ b/docker/dockerfile-build-ubuntu-rock
@@ -40,10 +40,10 @@ RUN useradd --create-home -u ${user_uid} -o -G sudo --shell /bin/bash jenkins &&
 
 ARG ROCBLAS_SRC_ROOT=/usr/local/src/rocBLAS
 
-# Clone rocblas repo
+# Clone rocRAND repo
 # Build client dependencies and install into /usr/local (LAPACK & GTEST)
 RUN mkdir -p ${ROCBLAS_SRC_ROOT} && cd ${ROCBLAS_SRC_ROOT} && \
-    git clone -b saad/develop --depth=1 https://github.com/saadrahim/rocPRIM . #&& \
+    git clone -b develop --depth=1 https://github.com/RocmSoftwarePlatform/rocRAND.git . #&& \
     #mkdir -p build/deps && cd build/deps && \
     #cmake -DBUILD_BOOST=OFF ${ROCBLAS_SRC_ROOT}/deps && \
     #make -j $(nproc) install && \
