--- a/docker/dockerfile-build-ubuntu-rock
+++ b/docker/dockerfile-build-ubuntu-rock
@@ -1,8 +1,8 @@
-# Parameters related to building hip
+# Parameters related to building rocrand
 ARG base_image
 
 FROM ${base_image}
-LABEL maintainer="kent.knox@amd"
+LABEL maintainer="saad.rahim@amd.com"
 
 ARG user_uid
 
@@ -10,8 +10,8 @@ ARG user_uid
 # Dependencies:
 # * hcc-config.cmake: pkg-config
 # * tensile: python2.7, python-yaml
-# * rocblas-test: gfortran, googletest
-# * rocblas-bench: libboost-program-options-dev
+# * rocrand-test: gfortran, googletest
+# * rocrand-bench: libboost-program-options-dev
 # * libhsakmt.so: libnuma1
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     rock-dkms \
@@ -37,14 +37,4 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
 RUN useradd --create-home -u ${user_uid} -o -G sudo --shell /bin/bash jenkins && \
     mkdir -p /etc/sudoers.d/ && \
     echo '%sudo   ALL=(ALL) NOPASSWD:ALL' | tee /etc/sudoers.d/sudo-nopasswd
-
-ARG ROCBLAS_SRC_ROOT=/usr/local/src/rocBLAS
-
-# Clone rocRAND repo
-# Build client dependencies and install into /usr/local (LAPACK & GTEST)
-RUN mkdir -p ${ROCBLAS_SRC_ROOT} && cd ${ROCBLAS_SRC_ROOT} && \
-    git clone -b develop --depth=1 https://github.com/RocmSoftwarePlatform/rocRAND.git . #&& \
-    #mkdir -p build/deps && cd build/deps && \
-    #cmake -DBUILD_BOOST=OFF ${ROCBLAS_SRC_ROOT}/deps && \
-    #make -j $(nproc) install && \
-    #rm -rf ${ROCBLAS_SRC_ROOT}
+    
