--- a/docker/dockerfile-build-ubuntu-rock
+++ b/docker/dockerfile-build-ubuntu-rock
@@ -2,7 +2,7 @@
 ARG base_image
 
 FROM ${base_image}
-LABEL maintainer="kent.knox@amd"
+LABEL maintainer="nico.trost@amd.com"
 
 ARG user_uid
 
@@ -20,11 +20,9 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
     git \
     make \
     cmake \
-    clang-format-3.8 \
     pkg-config \
     python2.7 \
     python-yaml \
-    gfortran \
     libboost-program-options-dev \
     libnuma1 \
     && \
