--- a/docker/dockerfile-install-ubuntu
+++ b/docker/dockerfile-install-ubuntu
@@ -1,44 +1,21 @@
-# Parameters related to building hip
+# Parameters related to building rocblas
 ARG base_image
 
 FROM ${base_image}
-LABEL maintainer="kent.knox@amd"
+LABEL maintainer="nico.trost@amd.com"
 
-ARG user_uid
+# Copy the debian package of rocblas into the container from host
+COPY *.deb /tmp/
 
-# Install dependent packages
-# Dependencies:
-# * hcc-config.cmake: pkg-config
-# * tensile: python2.7, python-yaml
-# * rocblas-test: gfortran, googletest
-# * rocblas-bench: libboost-program-options-dev
-# * libhsakmt.so: libnuma1
-
-USER root
-
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-    python2.7-minimal
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-    sudo \
-    ca-certificates \
-    git \
-    make \
-    cmake \
-    clang-format-3.8 \
-    pkg-config \
-    python2.7 \
-    python-yaml \
-    gfortran \
-    libboost-program-options-dev \
-    libnuma1 \
-    && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# docker pipeline runs containers with particular uid
-# create a jenkins user with this specific uid so it can use sudo priviledges
-# Grant any member of sudo group password-less sudo privileges
-RUN useradd --create-home -u ${user_uid} -o -G sudo --shell /bin/bash jenkins && \
-    mkdir -p /etc/sudoers.d/ && \
-    echo '%sudo   ALL=(ALL) NOPASSWD:ALL' | tee /etc/sudoers.d/sudo-nopasswd
-
+# Install the debian package, and print out contents of expected changed locations
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends --allow-unauthenticated -y \
+    /tmp/rocblas-*.deb \
+  && rm -f /tmp/*.deb \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/* \
+  && printf "ls -la /etc/ld.so.conf.d/\n" && ls -la /etc/ld.so.conf.d/ \
+  && printf "ls -la /opt/rocm/include\n" && ls -la /opt/rocm/include \
+  && printf "ls -la /opt/rocm/lib\n" && ls -la /opt/rocm/lib \
+  && printf "ls -la /opt/rocm/lib/cmake\n" && ls -la /opt/rocm/lib/cmake \
+  && printf "ls -la /opt/rocm/rocblas/include\n" && ls -la /opt/rocm/rocblas/include \
+  && printf "ls -la /opt/rocm/rocblas/lib\n" && ls -la /opt/rocm/rocblas/lib
