--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -288,26 +288,37 @@ test:nvcc_python:
     - $SUDO_CMD apt-get update -qq
     - $SUDO_CMD apt-get install -y -qq python python-pip python-numpy
     - $SUDO_CMD apt-get install -y -qq python3 python3-pip python3-numpy
+    - $SUDO_CMD apt-get install -y -qq wget
+    - sudo apt-get -y remove python-pip python3-pip
+    - wget https://bootstrap.pypa.io/get-pip.py
+    - sudo -H python get-pip.py
+    - sudo -H python3 get-pip.py
+
   script:
     - export ROCRAND_PATH=$CI_PROJECT_DIR/build/library/
-    # rocRAND Wrapper
+    # rocRAND Wrapper with Python 2
     - cd $CI_PROJECT_DIR/python/rocrand
-    - $SUDO_CMD python setup.py test
+    - $SUDO_CMD python2 setup.py test
+    - pip2 install . --user
+    - $SUDO_CMD python2 tests/rocrand_test.py
+    - pip2 uninstall --yes rocrand
+    # hipRAND Wrapper with Python 2
+    - cd $CI_PROJECT_DIR/python/hiprand
+    - $SUDO_CMD python2 setup.py test
+    - pip2 install . --user
+    - $SUDO_CMD python2 tests/hiprand_test.py
+    - pip2 uninstall --yes hiprand
+    # rocRAND Wrapper with Python 3
+    - pip3 --version
+    - cd $CI_PROJECT_DIR/python/rocrand
     - $SUDO_CMD python3 setup.py test
-    - pip install .
-    - $SUDO_CMD python tests/rocrand_test.py
-    - pip uninstall --yes rocrand
-    - pip3 install .
+    - pip3 install . --user
     - $SUDO_CMD python3 tests/rocrand_test.py
     - pip3 uninstall --yes rocrand
-    # hipRAND Wrapper
+    # hipRAND Wrapper with Python 3
     - cd $CI_PROJECT_DIR/python/hiprand
-    - $SUDO_CMD python setup.py test
     - $SUDO_CMD python3 setup.py test
-    - pip install .
-    - $SUDO_CMD python tests/hiprand_test.py
-    - pip uninstall --yes hiprand
-    - pip3 install .
+    - pip3 install . --user
     - $SUDO_CMD python3 tests/hiprand_test.py
     - pip3 uninstall --yes hiprand
 
