Updating to rocm-2.9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,7 @@ include(cmake/Common.cmake)
 include(cmake/Dependencies.cmake)
 
 # Set version variables
-set ( VERSION_STRING "2.8.0" )
-rocm_setup_version( VERSION ${VERSION_STRING} )
+rocm_setup_version( VERSION "2.9.0" )
 set ( rocrand_VERSION ${rocRAND_VERSION} )
 set ( hiprand_VERSION ${rocRAND_VERSION} )
 # Old-style version number used within the library's API. rocrand_get_version should be modified.
