--- a/docker/dockerfile-build-centos
+++ b/docker/dockerfile-build-centos
@@ -10,7 +10,7 @@ USER root
 ARG user_uid
 
 # Install dependent packages
-RUN yum install -y \
+RUN yum install -y --nogpgcheck\
     sudo \
     rock-dkms \
     centos-release-scl \
