--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,7 +50,7 @@ foreach(test_src ${rocRAND_TEST_SRCS})
         if(TARGET hip::device)
             target_link_libraries(${test_name} hip::device)
         else()
-            target_link_libraries(${test_name} hip::hip_hcc hip::hip_device)
+            target_link_libraries(${test_name} hip::device )
         endif()
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
@@ -116,7 +116,7 @@ foreach(test_src ${hipRAND_TEST_SRCS})
         if(TARGET hip::device)
             target_link_libraries(${test_name} hip::device)
         else()
-            target_link_libraries(${test_name} hip::hip_hcc hip::hip_device)
+            target_link_libraries(${test_name} hip::device )
         endif()
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
