--- a/test/linkage/CMakeLists.txt
+++ b/test/linkage/CMakeLists.txt
@@ -45,7 +45,7 @@ function(add_rocrand_link_test TEST_SOURCES)
         if(TARGET hip::device)
             target_link_libraries(${TEST_TARGET} hip::device)
         else()
-            target_link_libraries(${TEST_TARGET} hip::hip_hcc hip::hip_device)
+            target_link_libraries(${TEST_TARGET} hip::device )
         endif()
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
@@ -101,7 +101,7 @@ function(add_hiprand_link_test TEST_SOURCES)
         if(TARGET hip::device)
             target_link_libraries(${TEST_TARGET} hip::device)
         else()
-            target_link_libraries(${TEST_TARGET} hip::hip_hcc hip::hip_device)
+            target_link_libraries(${TEST_TARGET} hip::device )
         endif()
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
