--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ variables:
   # Local build options
   LOCAL_CXXFLAGS: ""
   LOCAL_CMAKE_OPTIONS: ""
+  ROCM_PATH: "/opt/rocm-3.1.0/"
 
 # ROCm
 
@@ -58,7 +59,32 @@ build:rocm:
   script:
     - mkdir build
     - cd build
-    - CXX=hcc cmake -DBUILD_BENCHMARK=ON -DBUILD_FORTRAN_WRAPPER=ON -DBUILD_CRUSH_TEST=ON -DBUILD_TOOLS=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON ../.
+    - CXX=hcc cmake -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_FORTRAN_WRAPPER=ON -DBUILD_CRUSH_TEST=ON -DBUILD_TOOLS=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON ../.
+    - make -j16
+    - make package
+  artifacts:
+    paths:
+      - build/library/
+      - build/test/crush_test_*
+      - build/test/test_*
+      - build/test/stat_test_*
+      - build/test/CTestTestfile.cmake
+      - build/benchmark/benchmark_*
+      - build/gtest/
+      - build/testu01/
+      - build/CMakeCache.txt
+      - build/CTestTestfile.cmake
+      - build/*.deb
+      - build/*.zip
+    expire_in: 2 weeks
+
+build:rocm-static:
+  extends: .rocm
+  stage: build
+  script:
+    - mkdir build
+    - cd build
+    - CXX=hcc cmake -BUILD_SHARED_LIBS=OFF -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_FORTRAN_WRAPPER=ON -DBUILD_CRUSH_TEST=ON -DBUILD_TOOLS=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON ../.
     - make -j16
     - make package
   artifacts:
@@ -80,7 +106,7 @@ build:rocm:
 test:rocm_vega20:
   extends: .rocm
   dependencies:
-    - build:rocm
+    - build:rocm-static
   tags:
     - vega20
     - rocm
@@ -170,7 +196,7 @@ test:rocm_package:
   script:
     - cd build
     - $SUDO_CMD dpkg -i rocrand-*.deb
-    - find -L /opt/rocm/ | grep rand | sort
+    - find -L $ROCM_PATH | grep rand | sort
     - mkdir ../build_package_test && cd ../build_package_test
     - cmake ../test/package/.
     - make VERBOSE=1
@@ -188,7 +214,7 @@ test:rocm_install:
     - CXX=hcc cmake -DBUILD_TEST=OFF -DBUILD_FORTRAN_WRAPPER=ON ../.
     - make -j16
     - $SUDO_CMD make install
-    - find -L /opt/rocm/ | grep rand | sort
+    - find -L $ROCM_PATH | grep rand | sort
     - mkdir ../install_test && cd ../install_test
     - cmake ../test/package/.
     - make VERBOSE=1
@@ -215,6 +241,7 @@ test:rocm_install:
     # (with heavy libraries, tools etc. that also require GUI and other packages)
     - apt-get download hip-nvcc
     - $SUDO_CMD dpkg -i --ignore-depends=cuda hip*.deb
+    - $SUDO_CMD ln -s $ROCM_PATH /opt/rocm
     - export PATH=$PATH:/opt/rocm/bin
     - hipconfig
     # cmake
@@ -231,7 +258,7 @@ build:nvcc:
   script:
     - mkdir build
     - cd build
-    - cmake -DBUILD_BENCHMARK=ON -DBUILD_FORTRAN_WRAPPER=ON -DBUILD_CRUSH_TEST=ON -DBUILD_TOOLS=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON ../.
+    - cmake -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -DBUILD_FORTRAN_WRAPPER=ON -DBUILD_CRUSH_TEST=ON -DBUILD_TOOLS=ON -DDEPENDENCIES_FORCE_DOWNLOAD=ON ../.
     - make -j16
     - make package
   artifacts:
@@ -331,7 +358,7 @@ test:nvcc_package:
   script:
     - cd build
     - $SUDO_CMD dpkg -i rocrand-*.deb
-    - find -L /opt/rocm/ | grep rand | sort
+    - find -L $ROCM_PATH | grep rand | sort
     - mkdir ../build_package_test && cd ../build_package_test
     - cmake ../test/package/.
     - make VERBOSE=1
@@ -349,7 +376,7 @@ test:nvcc_install:
     - cmake -DBUILD_TEST=OFF -DBUILD_FORTRAN_WRAPPER=ON ../.
     - make -j16
     - $SUDO_CMD make install
-    - find -L /opt/rocm/ | grep rand | sort
+    - find -L $ROCM_PATH | grep rand | sort
     - mkdir ../install_test && cd ../install_test
     - cmake ../test/package/.
     - make VERBOSE=1
