--- a/docker/dockerfile-build-centos
+++ b/docker/dockerfile-build-centos
@@ -4,7 +4,7 @@
 ARG base_image
 
 FROM ${base_image}
-LABEL maintainer="nico.trost@amd.com"
+LABEL maintainer="rocrand-maintainer@amd.com"
 
 USER root
 ARG user_uid
