--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,9 +55,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-# Build options
+# Build optionoption(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
-option(BUILD_FORTRAN_WRAPPER "Build Fortran wrapper" OFF)
 option(BUILD_TEST "Build tests (requires googletest)" OFF)
 option(BUILD_BENCHMARK "Build benchmarks" OFF)
 
