--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -65,6 +65,13 @@ foreach(test_src ${rocrand_pkg_TEST_SRCS})
                 roc::rocrand
                 ${CUDA_LIBRARIES}
         )
+    elseif(HIP_PLATFORM STREQUAL "clang")
+        target_link_libraries(${test_name}
+            PRIVATE
+                hip::hiprand
+                roc::rocrand
+                "-L${HIP_ROOT_DIR}/lib -lamdhip64 -Wl,-rpath,${HIP_ROOT_DIR}/lib"
+        )
     else()
         target_link_libraries(${test_name}
             PRIVATE
@@ -90,7 +97,7 @@ foreach(test_src ${hiprand_pkg_TEST_SRCS})
             PRIVATE
                 hip::hiprand
                 roc::rocrand
-                "-L${HIP_ROOT_DIR}/lib -lhip_hcc -Wl,-rpath,${HIP_ROOT_DIR}/lib" //TODO: pass in appropriate linker flag for hip-clang
+                "-L${HIP_ROOT_DIR}/lib -lamdhip64 -Wl,-rpath,${HIP_ROOT_DIR}/lib"         
         )
     else()
         target_link_libraries(${test_name}
