--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,10 +41,17 @@ foreach(test_src ${rocRAND_TEST_SRCS})
         PUBLIC
             ${PROJECT_SOURCE_DIR}/library/src
     )
-    target_link_libraries(${test_name}
-        rocrand
-        ${GTEST_BOTH_LIBRARIES}
-    )
+    if(BUILD_TEST_STATIC)
+        target_link_libraries(${test_name}
+            rocrand_static
+            ${GTEST_BOTH_LIBRARIES}
+        )
+    else()
+        target_link_libraries(${test_name}
+            rocrand
+            ${GTEST_BOTH_LIBRARIES}
+        )
+    endif()
     if(HIP_PLATFORM STREQUAL "hcc")
         # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
         if(TARGET hip::device)
@@ -96,12 +103,33 @@ foreach(test_src ${hipRAND_TEST_SRCS})
             ${PROJECT_SOURCE_DIR}/library/src
     )
     if(HIP_PLATFORM STREQUAL "nvcc")
-        target_link_libraries(${test_name}
-            hiprand
-            ${CUDA_curand_LIBRARY}
-            ${GTEST_BOTH_LIBRARIES}
-        )
+        if(BUILD_TEST_STATIC)
+            target_link_libraries(${test_name}
+                hiprand_static
+                ${CUDA_curand_LIBRARY}
+                ${GTEST_BOTH_LIBRARIES}
+            )
+        else()
+            target_link_libraries(${test_name}
+                hiprand
+                ${CUDA_curand_LIBRARY}
+                ${GTEST_BOTH_LIBRARIES}
+            )
+        endif()
     else()
+        if(BUILD_TEST_STATIC)
+            target_link_libraries(${test_name}
+                hiprand_static
+                rocrand_static
+                ${GTEST_BOTH_LIBRARIES}
+            )
+        else()
+            target_link_libraries(${test_name}
+                hiprand
+                rocrand
+                ${GTEST_BOTH_LIBRARIES}
+            )
+        endif()
         target_link_libraries(${test_name}
             hiprand
             rocrand
