--- a/test/linkage/CMakeLists.txt
+++ b/test/linkage/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 # Use CUDA_INCLUDE_DIRECTORIES to include required dirs
 # for nvcc if cmake version is less than 3.9.3
-if((HIP_PLATFORM STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
+if((HIP_COMPILER STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
     CUDA_INCLUDE_DIRECTORIES(
         "${PROJECT_BINARY_DIR}/library/include/"
         "${PROJECT_SOURCE_DIR}/library/include/"
@@ -17,7 +17,7 @@ function(add_rocrand_link_test TEST_SOURCES)
     list(GET TEST_SOURCES 0 TEST_MAIN_SOURCE)
     get_filename_component(TEST_TARGET ${TEST_MAIN_SOURCE} NAME_WE)
     # nvcc/CUDA
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         set_source_files_properties(${TEST_SOURCES}
             PROPERTIES
                 CUDA_SOURCE_PROPERTY_FORMAT OBJ
@@ -40,13 +40,8 @@ function(add_rocrand_link_test TEST_SOURCES)
         rocrand
         ${GTEST_BOTH_LIBRARIES}
     )
-    if(HIP_PLATFORM STREQUAL "hcc")
-        # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
-        if(TARGET hip::device)
-            target_link_libraries(${TEST_TARGET} hip::device)
-        else()
-            target_link_libraries(${TEST_TARGET} hip::device )
-        endif()
+    if(HIP_COMPILER STREQUAL "hcc" OR HIP_COMPILER STREQUAL "clang")
+        target_link_libraries(${TEST_TARGET} hip::device)
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
         endforeach()
@@ -66,7 +61,7 @@ function(add_hiprand_link_test TEST_SOURCES)
     list(GET TEST_SOURCES 0 TEST_MAIN_SOURCE)
     get_filename_component(TEST_TARGET ${TEST_MAIN_SOURCE} NAME_WE)
     # nvcc/CUDA
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         set_source_files_properties(${TEST_SOURCES}
             PROPERTIES
                 CUDA_SOURCE_PROPERTY_FORMAT OBJ
@@ -85,7 +80,7 @@ function(add_hiprand_link_test TEST_SOURCES)
         PUBLIC
             ${PROJECT_SOURCE_DIR}/library/src
     )
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         target_link_libraries(${TEST_TARGET}
             hiprand
             ${CUDA_curand_LIBRARY}
@@ -97,12 +92,7 @@ function(add_hiprand_link_test TEST_SOURCES)
             rocrand
             ${GTEST_BOTH_LIBRARIES}
         )
-        # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
-        if(TARGET hip::device)
-            target_link_libraries(${TEST_TARGET} hip::device)
-        else()
-            target_link_libraries(${TEST_TARGET} hip::device )
-        endif()
+        target_link_libraries(${TEST_TARGET} hip::device)
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
         endforeach()
