Enable packaging, other minor changes

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,14 +3,14 @@
 # Get sources
 file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_rocrand*.cpp)
 set(rocRAND_BENCHMARK_SRCS ${tmp})
-if(HIP_PLATFORM STREQUAL "nvcc")
+if(HIP_COMPILER STREQUAL "nvcc")
     file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_curand*.cpp)
     set(rocRAND_BENCHMARK_SRCS ${rocRAND_BENCHMARK_SRCS} ${tmp})
 endif()
 
 # Use CUDA_INCLUDE_DIRECTORIES to include required dirs
 # for nvcc if cmake version is less than 3.9.3# Use CUDA_INCLUDE_DIRS if cmake version is less than 3.9.3
-if((HIP_PLATFORM STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
+if((HIP_COMPILER STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
     CUDA_INCLUDE_DIRECTORIES(
         "${PROJECT_BINARY_DIR}/library/include/"
         "${PROJECT_SOURCE_DIR}/library/include/"
@@ -21,7 +21,7 @@ endif()
 foreach(benchmark_src ${rocRAND_BENCHMARK_SRCS})
     get_filename_component(benchmark_name ${benchmark_src} NAME_WE)
     # nvcc/CUDA
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         set_source_files_properties(${benchmark_src}
             PROPERTIES
                 CUDA_SOURCE_PROPERTY_FORMAT OBJ
@@ -34,24 +34,16 @@ foreach(benchmark_src ${rocRAND_BENCHMARK_SRCS})
     else()
         add_executable(${benchmark_name} ${benchmark_src})
     endif()
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         target_link_libraries(${benchmark_name}
             rocrand
             ${CUDA_curand_LIBRARY}
         )
     else()
-        # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
-        if(TARGET hip::device)
-            target_link_libraries(${benchmark_name}
-                rocrand
-                hip::device
-            )
-        else()
-            target_link_libraries(${benchmark_name}
-                rocrand
-                hip::device 
-            )
-        endif()
+        target_link_libraries(${benchmark_name}
+            rocrand
+            hip::device 
+        )
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${benchmark_name} --amdgpu-target=${amdgpu_target})
         endforeach()
